kubernetes_deploy/staging/deployment.yml
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: laa-cla-public
spec:
  template:
    metadata:
      labels:
        app: laa-cla-public-app
    spec:
      containers:
      - image: 926803513772.dkr.ecr.eu-west-1.amazonaws.com/laa-get-access/laa-cla-public:master
        name: app
        readinessProbe:
          httpGet:
            path: /ping.json
            port: 80
          initialDelaySeconds: 5
          timeoutSeconds: 1
          periodSeconds: 10
        livenessProbe:
          httpGet:
            path: /ping.json
            port: 80
          initialDelaySeconds: 10
          timeoutSeconds: 1
          periodSeconds: 10
        ports:
        - containerPort: 80
          name: http
