kubernetes_deploy/staging/service.yml
apiVersion: v1
kind: Service
metadata:
  name: laa-cla-public
  namespace: laa-cla-public-staging
spec:
  ports:
  - port: 80
    name: http
    targetPort: 8000
  selector:
    app: laa-cla-public-app
